--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Tajawal" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
 	</head>
 	<body>
@@ -81,5 +82,41 @@
 				</div>
 			</section>
 		</main>
+		<footer>
+			<a href="https://www.instagram.com/about/us/ ">
+				<li class="footer__paragraph">sobre nós</li>
+			</a>
+			<a href="https://help.instagram.com/">
+				<li class="footer__paragraph">suporte</li>
+			</a>
+			<a href="http://instagram.tumblr.com/">
+				<li class="footer__paragraph">blog</li>
+			</a>
+			<a href="https://instagram-press.com/">
+				<li class="footer__paragraph">imprensa</li>
+			</a>
+			<a href="https://www.instagram.com/developer/">
+				<li class="footer__paragraph">api</li>
+			</a>
+			<a href="https://www.instagram.com/about/jobs/">
+				<li class="footer__paragraph">carreiras</li>
+			</a>
+			<a href="https://help.instagram.com/519522125107875">
+				<li class="footer__paragraph">privacidade</li>
+			</a>
+			<a href="https://help.instagram.com/581066165581870">
+				<li class="footer__paragraph">termos</li>
+			</a>
+			<a href="https://www.instagram.com/explore/locations/">
+				<li class="footer__paragraph">diretório</li>
+			</a>
+			<a href="https://www.instagram.com/directory/profiles/">
+				<li class="footer__paragraph">perfis</li>
+			</a>
+			<a href="https://www.instagram.com/directory/hashtags/">
+				<li class="footer__paragraph"> hashtags</li>
+			</a>
+			<li class="footer__paragraph">idioma</li>
+		</footer>
 	</body>
 </html>
